--- a/index.html
+++ b/index.html
@@ -4,25 +4,24 @@
 	<title>Jeu de l'oie</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet"  href="style.css">
+    <script src="main.js"  defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
 	<div id=container>
 		<div id=rouge><img src=rouge.png ></div>
 		<div id=vert><img src=vert.png ></div>
-		<div  id =divButRouge><input id =butRouge class="btn btn-danger" type="button"  value="Rouge" disabled></div>
+		<div  id =divButRouge><input id =butRouge class="btn btn-danger" type="button"  value="Rouge" disabled ></div>
 		<div  id =divButVert ><input id =butVert class="btn btn-success" type="button" value="Vert" disabled></div>
 		<div  id =divButStart><input id =butStart class="btn btn-primary" type="button" value="Start" ></div>
 		<div id=number>
-			<div id=1><img src=1.gif /></div>
-			<div id=2><img src=2.gif /></div>
-			<div id=3><img src=3.gif /></div>
-			<div id=4><img src=4.gif /></div>
-			<div id=5><img src=5.gif /></div>
-			<div id=6><img src=6.gif /></div>		
+			<div id=d1><img src=1.gif /></div>
+			<div id=d2><img src=2.gif /></div>
+			<div id=d3><img src=3.gif /></div>
+			<div id=d4><img src=4.gif /></div>
+			<div id=d5><img src=5.gif /></div>
+			<div id=d6><img src=6.gif /></div>		
 		</div>
 	</div>
-
-    <script src = script.js>
-    </script>
 </body>
 </html>
