--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 	<div id=container>
-		<div id=rouge><img src=rouge.png ></div>
-		<div id=vert><img src=vert.png ></div>
+		<div id=rouge><img src=images/girlWitch.png ></div>
+		<div id=vert><img src=images/boyWitch.png ></div>
 		<div  id =divButRouge><input id =butRouge class="btn btn-danger" type="button"  value="Rouge" disabled ></div>
 		<div  id =divButVert ><input id =butVert class="btn btn-success" type="button" value="Vert" disabled></div>
 		<div  id =divButStart><input id =butStart class="btn btn-primary" type="button" value="Start" ></div>
