fonction de reset et personnalisation des boutons

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<div id=container>
 		<div id=rouge><img src=images/girlWitch.png ></div>
 		<div id=vert><img src=images/boyWitch.png ></div>
-		<div  id =divButRouge><input id =butRouge class="btn btn-danger" type="button"  value="Rouge" disabled ></div>
-		<div  id =divButVert ><input id =butVert class="btn btn-success" type="button" value="Vert" disabled></div>
-		<div  id =divButStart><input id =butStart class="btn btn-primary" type="button" value="Start" ></div>
+		<div  id =divButRouge><input id =butRouge class="btn btn-danger" type="button"  value="Jeanne" disabled ></div>
+		<div  id =divButVert ><input id =butVert class="btn btn-success" type="button" value="Arthur" disabled></div>
+		<div  id =divButStart><input id =butStart class="btn btn-primary" type="button" value="COMMENCEZ" ></div>
 		<div id=number>
 			<div id=d1><img src=1.gif /></div>
 			<div id=d2><img src=2.gif /></div>
