--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 			<div id=d5><img src=5.gif /></div>
 			<div id=d6><img src=6.gif /></div>		
 		</div>
+		<div id="modalAnimation">
+			
+		</div>
 	</div>
 </body>
 </html>
